Fix position of comment collapse button

--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -14,6 +14,7 @@
   margin-top: @_spacing;
   font-size: @font-size--normal-2;
   border-bottom: 0 solid @osu-colour-b6;
+  position: relative;
 
   &--top {
     border-bottom-width: 1px;
